RunClang: Exit with error if compiler invocation argument parsing fails
If an error occurs during CompilerInvocation::CreateFromArgs then exit
with an error code immediately.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -136,6 +136,8 @@ castxml_test_cmd(gccxml-and-objc2 --castxml-gccxml ${empty_mm})
 castxml_test_cmd(gccxml-empty-c++98 --castxml-gccxml -std=c++98 ${empty_cxx})
 castxml_test_cmd(gccxml-empty-c++98-E --castxml-gccxml -std=c++98 ${empty_cxx} -E)
 castxml_test_cmd(gccxml-empty-c++98-c --castxml-gccxml -std=c++98 ${empty_cxx} -c)
+castxml_test_cmd(std-c++98-src-c -std=c++98 ${empty_c})
+castxml_test_cmd(std-c89-src-cxx -std=c89 ${empty_cxx})
 castxml_test_cmd(input-missing ${input}/does-not-exist.c)
 castxml_test_cmd(o-missing -o)
 castxml_test_cmd(start-missing --castxml-start)
