doc: Install documentation to a more-standard location
On many GNU/Linux distributions the default documentation directory is
`<prefix>/share/doc/`.  This is a reasonable default for other platforms
too.

GitHub-Issue: 35

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ if(NOT CastXML_INSTALL_DATA_DIR)
   set(CastXML_INSTALL_DATA_DIR share/castxml)
 endif()
 if(NOT CastXML_INSTALL_DOC_DIR)
-  set(CastXML_INSTALL_DOC_DIR doc/castxml)
+  set(CastXML_INSTALL_DOC_DIR share/doc/castxml)
 endif()
 if(NOT CastXML_INSTALL_MAN_DIR)
   set(CastXML_INSTALL_MAN_DIR man)
