--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,13 +40,19 @@ if(NOT CastXML_INSTALL_MAN_DIR)
 endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  if(NOT LLVM_ENABLE_EH)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
+  endif()
+  if(NOT LLVM_ENABLE_RTTI)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
+  endif()
   if(CYGWIN OR MINGW)
     # Use GNU extensions on Windows as LLVM upstream does.
     set(std_cxx11 "-std=gnu++11")
   else()
     set(std_cxx11 "-std=c++11")
   endif()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti ${std_cxx11}")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${std_cxx11}")
 endif()
 
 set(KWSYS_NAMESPACE cxsys)
