--- a/src/Version.h.in
+++ b/src/Version.h.in
@@ -16,6 +16,6 @@
 #ifndef CASTXML_VERSION_H
 #define CASTXML_VERSION_H
 
-#define CASTXML_VERSION "@CastXML_VERSION@"
+#define CASTXML_VERSION_STRING "@CastXML_VERSION@"
 
 #endif // CASTXML_VERSION_H
