--- a/src/Version.h.in
+++ b/src/Version.h.in
@@ -17,5 +17,8 @@
 #define CASTXML_VERSION_H
 
 #define CASTXML_VERSION_STRING "@CastXML_VERSION@"
+#define CASTXML_VERSION_MAJOR @CastXML_VERSION_MAJOR@
+#define CASTXML_VERSION_MINOR @CastXML_VERSION_MINOR@
+#define CASTXML_VERSION_PATCH @CastXML_VERSION_PATCH@
 
 #endif // CASTXML_VERSION_H
