--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -212,6 +212,7 @@ castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-abstract)
 castxml_test_gccxml(Class-annotate)
+castxml_test_gccxml(Class-base-offset)
 castxml_test_gccxml(Class-base-typedef)
 castxml_test_gccxml(Class-bases)
 castxml_test_gccxml(Class-forward)
