--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -292,6 +292,8 @@ castxml_test_gccxml(OperatorMethod-annotate)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(RValueReferenceType)
+castxml_test_gccxml(TypeAlias)
+castxml_test_gccxml(TypeAliasTemplate)
 castxml_test_gccxml(Typedef-annotate)
 castxml_test_gccxml(Typedef-paren)
 castxml_test_gccxml(Typedef-to-Class-template)
