RunClang: Tolerate __builtin_va_arg_pack during parsing
When simulating preprocessing by a GNU compiler code (in the standard
library) may try to use this builtin, but Clang does not support it.
Provide a fake instance of the builtin using a preprocessor macro good
enough to get through parsing references to it in function bodies.

GitHub-Issue: #46

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -397,3 +397,11 @@ castxml_test_gccxml(GNU-float128-nostart)
 unset(castxml_test_gccxml_custom_start)
 unset(castxml_test_gccxml_custom_input)
 unset(castxml_test_gccxml_extra_arguments)
+
+set(castxml_test_gccxml_extra_arguments --castxml-cc-gnu-c $<TARGET_FILE:cc-gnu>)
+castxml_test_gccxml_c(GNU-va_arg_pack)
+unset(castxml_test_gccxml_extra_arguments)
+
+set(castxml_test_gccxml_extra_arguments --castxml-cc-gnu $<TARGET_FILE:cc-gnu>)
+castxml_test_gccxml(GNU-va_arg_pack)
+unset(castxml_test_gccxml_extra_arguments)
