--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -298,6 +298,7 @@ castxml_test_gccxml(Function-annotate)
 castxml_test_gccxml(Function-Argument-annotate)
 castxml_test_gccxml(Function-Argument-decay)
 castxml_test_gccxml(Function-Argument-default)
+castxml_test_gccxml(Function-Argument-default-cast)
 castxml_test_gccxml(Function-Argument-default-ns)
 castxml_test_gccxml(Function-rvalue-reference)
 castxml_test_gccxml(Function-template)
@@ -310,6 +311,7 @@ castxml_test_gccxml(FundamentalTypes)
 castxml_test_gccxml(Method)
 castxml_test_gccxml(Method-annotate)
 castxml_test_gccxml(Method-Argument-default)
+castxml_test_gccxml(Method-Argument-default-cast)
 castxml_test_gccxml(Method-overrides)
 castxml_test_gccxml(Method-rvalue-reference)
 castxml_test_gccxml(MethodType)
