test: Generalize expected c89 output for any C dialect
Rename `test/expect/gccxml.{c89 => c}.*` and teach our test
infrastructure to use the more generic name.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,6 +49,9 @@ macro(castxml_test_gccxml_common prefix ext std test)
   if("${std}" MATCHES "^gnu(.*)$")
     list(APPEND _castxml_expect ${prefix}.c${CMAKE_MATCH_1}.${test})
   endif()
+  if("${std}" MATCHES "^(c|gnu)[^+]")
+    list(APPEND _castxml_expect ${prefix}.c.${test})
+  endif()
   list(APPEND _castxml_expect ${prefix}.any.${test})
   set(command $<TARGET_FILE:castxml>
     --castxml-gccxml
