castxml: Support -std=c99 and -std=c11 with --castxml-gccxml
Drop the rejection of `-std={c99,c11}` and `--castxml-gccxml` together.
Extend the test suite to run all gccxml C output format tests in
`-std=c99` and `-std=c11` modes to verify the behavior of the mode is
as close as possible to other modes.

GitHub-Issue: CastXML/CastXML#54

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -76,8 +76,24 @@ macro(castxml_test_gccxml_c89 test)
   castxml_test_gccxml_common(gccxml c c89 ${test})
 endmacro()
 
+macro(castxml_test_gccxml_c99 test)
+  castxml_test_gccxml_common(gccxml c c99 ${test})
+endmacro()
+
+macro(castxml_test_gccxml_c11 test)
+  castxml_test_gccxml_common(gccxml c c11 ${test})
+endmacro()
+
 macro(castxml_test_gccxml_gnu89 test)
   castxml_test_gccxml_common(gccxml c gnu89 ${test})
+endmacro()
+
+macro(castxml_test_gccxml_gnu99 test)
+  castxml_test_gccxml_common(gccxml c gnu99 ${test})
+endmacro()
+
+macro(castxml_test_gccxml_gnu11 test)
+  castxml_test_gccxml_common(gccxml c gnu11 ${test})
 endmacro()
 
 macro(castxml_test_gccxml_cxx98 test)
@@ -131,6 +147,10 @@ endmacro()
 macro(castxml_test_gccxml_c test)
   castxml_test_gccxml_c89(${test})
   castxml_test_gccxml_gnu89(${test})
+  castxml_test_gccxml_c99(${test})
+  castxml_test_gccxml_gnu99(${test})
+  castxml_test_gccxml_c11(${test})
+  castxml_test_gccxml_gnu11(${test})
 endmacro()
 
 macro(castxml_test_gccxml test)
