test: Add case for implicit members of a const aggregate struct
A struct like

    struct foo {
      int const bar;
    };

cannot have an implicit default constructor but can be initialized
as an aggregate, e.g.

    foo f = {123};

Clang in C++11 mode and above correctly deletes the implicit default
constructor.  Add a test case covering this for C++11 and C++14.

Unfortunately Clang in C++98 mode does not mark the implicit default
constructor as invalid even after `Sema::MarkFunctionReferenced` has
been called.  Therefore CastXML incorrectly generates the member.
Add a "broken" test case to record this limitation.

GitHub-Issue: CastXML/CastXML#55

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -162,6 +162,13 @@ macro(castxml_test_gccxml test)
   castxml_test_gccxml_gnuxx14(${test})
 endmacro()
 
+macro(castxml_test_gccxml_11_14 test)
+  castxml_test_gccxml_cxx11(${test})
+  castxml_test_gccxml_gnuxx11(${test})
+  castxml_test_gccxml_cxx14(${test})
+  castxml_test_gccxml_gnuxx14(${test})
+endmacro()
+
 macro(castxml_test_gccxml_broken test)
   castxml_test_gccxml_broken_cxx98(${test})
   castxml_test_gccxml_broken_gnuxx98(${test})
@@ -169,6 +176,11 @@ macro(castxml_test_gccxml_broken test)
   castxml_test_gccxml_broken_gnuxx11(${test})
   castxml_test_gccxml_broken_cxx14(${test})
   castxml_test_gccxml_broken_gnuxx14(${test})
+endmacro()
+
+macro(castxml_test_gccxml_broken_98 test)
+  castxml_test_gccxml_broken_cxx98(${test})
+  castxml_test_gccxml_broken_gnuxx98(${test})
 endmacro()
 
 set(input ${CMAKE_CURRENT_LIST_DIR}/input)
@@ -287,6 +299,7 @@ castxml_test_gccxml(Class-implicit-member-access-mutable)
 castxml_test_gccxml(Class-implicit-member-array)
 castxml_test_gccxml(Class-implicit-member-bad-base)
 castxml_test_gccxml(Class-implicit-member-const)
+castxml_test_gccxml_11_14(Class-implicit-member-const-aggregate)
 castxml_test_gccxml(Class-implicit-member-reference)
 castxml_test_gccxml(Class-implicit-members)
 castxml_test_gccxml(Class-incomplete)
@@ -411,6 +424,7 @@ castxml_test_gccxml_c(Typedef-called-class)
 castxml_test_gccxml_c(invalid)
 
 castxml_test_gccxml_broken(ReferenceType-to-Class-template)
+castxml_test_gccxml_broken_98(Class-implicit-member-const-aggregate)
 
 set(castxml_test_gccxml_extra_arguments --castxml-cc-gnu-c "(" $<TARGET_FILE:cc-gnu> --cc-define=__x86_64__ ")")
 castxml_test_gccxml_c(GNU-float128)
