--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -293,6 +293,7 @@ castxml_test_gccxml(Class-implicit-members)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-incomplete-twice)
 castxml_test_gccxml(Class-member-template)
+castxml_test_gccxml(Class-member-template-access)
 castxml_test_gccxml(Class-partial-template-member-Typedef)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(Class-template-Method-Argument-const)
