Output: Fix assertion failure on translation-unit-level operators
Refactoring in commit 917c646e (Output: Generalize exclusion of internal
`__castxml` builtins, 2016-04-18) introduced an unconditional call to
`clang::NamedDecl::getName`, but that method asserts that the name is
a valid identifier.  Instead call `getIdentifier` ourselves and check
the name only if it is a valid identifier.

GitHub-Issue: #62

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -400,6 +400,10 @@ castxml_test_gccxml(using-declaration-start)
 castxml_test_gccxml(using-directive-ns)
 castxml_test_gccxml(using-directive-start)
 
+set(castxml_test_gccxml_custom_start "")
+castxml_test_gccxml(nostart)
+unset(castxml_test_gccxml_custom_start)
+
 if(";${LLVM_TARGETS_TO_BUILD};" MATCHES ";X86;")
   set(castxml_test_gccxml_extra_arguments -target i386-pc-windows-msvc)
   castxml_test_gccxml(Function-calling-convention-ms)
