--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -305,6 +305,7 @@ castxml_test_gccxml(Class-template-Method-return-const)
 castxml_test_gccxml(Class-template-bases)
 castxml_test_gccxml(Class-template-constructor-template)
 castxml_test_gccxml(Class-template-friends)
+castxml_test_gccxml(Class-template-member-nontemplate-Typedef)
 castxml_test_gccxml(Class-template-member-Typedef)
 castxml_test_gccxml(Class-template-member-Typedef-const)
 castxml_test_gccxml(Class-template-member-template)
