Port to LLVM/Clang SVN r280011 (trunk) and 3.9
Since LLVM/Clang SVN r275507 (Frontend: Simplify ownership model for
clang's output streams, 2016-07-15) the createDefaultOutputFile method
returns ownership of the stream via unique_ptr.

Also on Windows we now must link to `version.lib` because LLVM/Clang
now uses the GetFileVersionInfoW symbol.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,9 @@ llvm_map_components_to_libnames(llvm_libs
   support
   ${LLVM_TARGETS_TO_BUILD}
   )
+if(WIN32)
+  list(APPEND llvm_libs version.lib)
+endif()
 
 add_executable(castxml
   castxml.cxx
