Output: Avoid assertion failure on a FunctionDecl with no identifier
All C++98 function declarations have identifiers as names.  Some C++11
function declarations, such as user defined literal operators, do not
have identifiers.  While we may implement support for these in a future
non-gccxml output format, for now simply avoid an assertion failure by
outputting such declarations as Unimplemented nodes.

Issue: #76

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -315,6 +315,7 @@ castxml_test_gccxml(Constructor-annotate)
 castxml_test_gccxml(Converter)
 castxml_test_gccxml(Converter-annotate)
 castxml_test_gccxml(CvQualifiedType)
+castxml_test_gccxml(CXXLiteral)
 castxml_test_gccxml(Destructor)
 castxml_test_gccxml(Destructor-annotate)
 castxml_test_gccxml(Enumeration)
