Check LLVM installation for Clang headers early
Sometimes users try to build CastXML on a distro with a LLVM development
package installed but not the corresponding Clang development package.
This results in a compilation failure due to missing headers.  Provide
a better/earlier error message by checking for the Clang headers as
soon as LLVM is found.

Closes: #79

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,25 @@ if(DEFINED LLVM_BUILD_BINARY_DIR)
     "  ${CastXML_SOURCE_DIR}/README.rst")
 endif()
 
+set(found_clang 0)
+set(tried_clang)
+foreach(inc ${LLVM_INCLUDE_DIRS})
+  if(EXISTS "${inc}/clang/AST/ASTConsumer.h")
+    set(found_clang 1)
+    break()
+  else()
+    set(tried_clang "  ${inc}\n")
+  endif()
+endforeach()
+if(NOT found_clang)
+  message(FATAL_ERROR
+    "LLVM_DIR refers to a LLVM installation:\n"
+    "  ${LLVM_DIR}\n"
+    "that does not have `clang/` headers in any include directory:\n"
+    "${tried_clang}"
+    )
+endif()
+
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
