--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -52,7 +52,7 @@ for fpath in castxml_manuals:
                               name, desc, [], int(sec)))
         else:
             sys.stderr.write("ERROR: No castxml-manual-description in '%s'\n" % fpath)
-    except Exception, e:
+    except Exception as e:
         sys.stderr.write("ERROR: %s\n" % str(e))
 man_show_urls = False
 
