Output: Add the type of nullptr as a FundamentalType
Extend the `--castxml-output=1` format to support the nullptr type.
The name of the type is `decltype(nullptr)`.  Recognize types named
exactly this way (as a literal) and treat them as a FundamentalType.
This gives the `std::nullptr_t` typedef a meaningful representation even
without full decltype support.  Leave deeper nullptr-typed expressions
like `decltype((nullptr))` unchanged.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -481,6 +481,7 @@ castxml_test_output(FunctionType)
 castxml_test_output(FunctionType-variadic)
 castxml_test_output(FundamentalType)
 castxml_test_output(FundamentalTypes)
+castxml_test_output_11(FundamentalType-nullptr)
 castxml_test_output(Method)
 castxml_test_output(Method-annotate)
 castxml_test_output(Method-deprecated)
