--- a/test/expect/cmd.predefined-macros.stdout.txt.in
+++ b/test/expect/cmd.predefined-macros.stdout.txt.in
@@ -1,7 +1,11 @@
-#define __castxml__ @__castxml__@
+#define __castxml__ __castxml_check\(__castxml_major__,__castxml_minor__,__castxml_patch__\)
+#define __castxml_check\(major,minor,patch\) \(10000000000\*major \+ 100000000\*minor \+ patch\)
 #define __castxml_clang_major__ [0-9]+
 #define __castxml_clang_minor__ [0-9]+
 #define __castxml_clang_patchlevel__ [0-9]+
+#define __castxml_major__ @CastXML_VERSION_MAJOR@
+#define __castxml_minor__ @CastXML_VERSION_MINOR@
+#define __castxml_patch__ @CastXML_VERSION_PATCH@
 #define __clang__ 1
 #define __clang_major__ [0-9]+
 #define __clang_minor__ [0-9]+
