Port to LLVM/Clang SVN r370248 (trunk)
LLVM now compiles as C++14.  It does not provide `llvm::make_unique`.
The `clang::CompilerInvocation::CreateFromArgs` signature now accepts an
`ArrayRef` for the argument range instead of iterators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,11 @@ if(CYGWIN OR MINGW)
 else()
   set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
-set(CMAKE_CXX_STANDARD 11)
+if(LLVM_VERSION_MAJOR GREATER 9)
+  set(CMAKE_CXX_STANDARD 14)
+else()
+  set(CMAKE_CXX_STANDARD 11)
+endif()
 
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${CLANG_INCLUDE_DIRS})
