cmake: Use CXX_STANDARD and CXX_EXTENSIONS instead of '-std=' flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,22 +39,6 @@ if(NOT CastXML_INSTALL_MAN_DIR)
   set(CastXML_INSTALL_MAN_DIR man)
 endif()
 
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-  if(NOT LLVM_ENABLE_EH)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
-  endif()
-  if(NOT LLVM_ENABLE_RTTI)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
-  endif()
-  if(CYGWIN OR MINGW)
-    # Use GNU extensions on Windows as LLVM upstream does.
-    set(std_cxx11 "-std=gnu++11")
-  else()
-    set(std_cxx11 "-std=c++11")
-  endif()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${std_cxx11}")
-endif()
-
 macro(hint_clang_from_llvm)
   if(LLVM_DIR AND NOT Clang_DIR)
     if(LLVM_DIR MATCHES "share/llvm/cmake$")
@@ -128,6 +112,22 @@ if(NOT found_clang)
     "${tried_clang}"
     )
 endif()
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  if(NOT LLVM_ENABLE_EH)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
+  endif()
+  if(NOT LLVM_ENABLE_RTTI)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
+  endif()
+endif()
+if(CYGWIN OR MINGW)
+  # Use GNU extensions on Windows as LLVM upstream does.
+  set(CMAKE_CXX_EXTENSIONS ON)
+else()
+  set(CMAKE_CXX_EXTENSIONS OFF)
+endif()
+set(CMAKE_CXX_STANDARD 11)
 
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${CLANG_INCLUDE_DIRS})
