add specific tests for C linkage (from C as well as C++)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -468,6 +468,8 @@ castxml_test_output(Field)
 castxml_test_output(Field-annotate)
 castxml_test_output(Field-deprecated)
 castxml_test_output(Function)
+castxml_test_output_c(Function-C)
+castxml_test_output(Function-extern-C)
 castxml_test_output_14(Function-auto)
 castxml_test_output(Function-annotate)
 castxml_test_output(Function-deprecated)
