--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -495,9 +495,11 @@ castxml_test_output(Field)
 castxml_test_output(Field-annotate)
 castxml_test_output(Field-deprecated)
 castxml_test_output(Function)
+castxml_test_output_c(Function)
 castxml_test_output_14(Function-auto)
 castxml_test_output(Function-annotate)
 castxml_test_output(Function-deprecated)
+castxml_test_output(Function-extern-C)
 castxml_test_output(Function-Argument-annotate)
 castxml_test_output(Function-Argument-deprecated)
 castxml_test_output(Function-Argument-decay)
@@ -563,8 +565,10 @@ castxml_test_output(Typedef-to-extern-C-FundamentalType-mode)
 castxml_test_output(Typedef-to-Struct-anonymous)
 castxml_test_output(Typedef-to-Union-anonymous)
 castxml_test_output(Variable)
+castxml_test_output_c(Variable)
 castxml_test_output(Variable-annotate)
 castxml_test_output(Variable-deprecated)
+castxml_test_output(Variable-extern-C)
 castxml_test_output(Variable-in-Class)
 castxml_test_output(Variable-init)
 castxml_test_output(Variable-init-cast)
