--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -536,6 +536,7 @@ castxml_test_output(Typedef-to-extern-C-FundamentalType-mode)
 castxml_test_output(Typedef-to-Struct-anonymous)
 castxml_test_output(Typedef-to-Union-anonymous)
 castxml_test_output(Variable)
+castxml_test_output(Variable-extern-C)
 castxml_test_output_c(Variable-C)
 castxml_test_output(Variable-annotate)
 castxml_test_output(Variable-deprecated)
